# faiss

./: .gitignore  CMakeLists.txt  experiments.md  note.md
faiss/: IndexIVF.cpp
faiss/gpu/: GpuIndex.cu
faiss/gpu/impl/: Distance.cu  IVFPQ.cu  PQScanMultiPassPrecomputed.cu
my/: compute_table.py  dim_result.txt  draw_compute_table_dim.py  draw_compute_table_m.py  draw_k_select.py  draw_scan.py  estimate.py  pq.py  pqscan.py  priority_queue.cpp
results/: ivf_nlist  ivf_nlist_test  ivf_nprobe  k_select_K_cpu  k_select_k_full  k_select_k_tominus  k_select_nb_cpu  k_select_nb_full  k_select_nb_tominus  m_scan  nb_scan  nb_scan_cpu
tutorial/cpp/: 2-IVFFlat.cpp  4-GPU.cpp  CMakeLists.txt  IVFFlat-GPU.cpp  IVFPQ-GPU.cpp
